rust/quake-ctest/include/c_ref_prelude.h

#define W_GetLumpName		c_ref_W_GetLumpName
extern double realtime;
/* ---- Phase 7 M9f (T9f.0): the pr_ext.c oracle's renderer-facing slice ----
 *
 * stubs/pr_ext_ref.c composes Quake/pr_ext.c into this link (the composing-TU
 * pattern; see that file's header). pr_ext.c reaches a handful of glquake.h /
 * draw.h declarations the real headers cannot supply here, because glquake.h
 * pulls vulkan/vulkan.h and tasks.h. Two kinds of declaration follow, and they
 * are labelled individually:
 *
 *   FAITHFUL   -- character-for-character the real declaration; a Phase 8 port
 *                 can trust it.
 *   COMPILE-ONLY -- a minimal stand-in with the right *spelling* but not the
 *                 real layout. Every consumer of one is Phase 8 renderer code
 *                 (PF_cl_draw*, DrawQC_CharacterQuad, PF_getsurface*) that no
 *                 differential drives and that nothing in this link calls, and
 *                 nothing here takes sizeof() of a COMPILE-ONLY struct.
 *
 * Definitions for the objects declared here live in stubs/pr_ext_ref.c as link
 * doubles, not in a real renderer TU.
 */

/* FAITHFUL: glquake.h:41, :107, :636, :639 */
extern int glwidth, glheight;
typedef struct VkCommandBuffer_T *VkCommandBuffer;
typedef struct VkRenderPass_T	 *VkRenderPass;
typedef struct vulkan_pipeline_s
{
	VkPipeline				 handle;
	vulkan_pipeline_layout_t layout;
} vulkan_pipeline_t;
/* COMPILE-ONLY: glquake.h:339-349. pr_ext.c only ever dereferences `cb`; the
 * real struct also carries `canvastype current_canvas`, `uint32_t
 * vbo_indices[MAX_BATCH_SIZE]` and `unsigned int num_vbo_indices`, which are
 * omitted because MAX_BATCH_SIZE and canvastype are renderer-private and
 * nothing here takes sizeof (cb_context_t). */
typedef struct cb_context_s
{
	VkCommandBuffer	  cb;
	VkRenderPass	  render_pass;
	int				  render_pass_index;
	int				  subpass;
	vulkan_pipeline_t current_pipeline;
} cb_context_t;
void	Draw_SubPic (
	   cb_context_t *cbx, float x, float y, float w, float h, qpic_t *pic, float s1, float t1, float s2, float t2, float *rgb, float alpha);
/* clang-format on */

#define MAX_SCOREBOARD 16
#define cl                                c_ref_cl
#define cls                               c_ref_cls
/* ---- Phase 7 M10d seam: the draw.h / menu.h / screen.h declarations sbar.c
 * reaches (task M10d). sbar.c becomes an oracle TU here, composed by
 * stubs/sbar_ref.c rather than listed in build.rs's C_SOURCES; the reason
 * (stubs/console_ref.c already owns the shared Draw_ recorder, and the two
 * files' file-static pic tables must not collide) is written out at the top
 * of stubs/sbar_ref.c. The doubles live in stubs/draw_ref.c.
 *
 * draw.h and menu.h are NOT included as-is: both are Vulkan-facing through
 * cb_context_t. Only what sbar.c names is taken, copied verbatim from the
 * line named on each. screen.h IS included above (:1875), so it already
 * supplies scr_sbaralpha and scr_sbarscale; scr_style is not in any header --
 * gl_screen.c:94 defines it and gl_draw.c:29, menu.c:119 and sbar.c:69 each
 * re-declare it locally -- so the one declaration below is needed here. ---- */

qpic_t *Draw_PicFromWad (const char *name);						  /* draw.h:44 */
qpic_t *Draw_CachePic (const char *path);						  /* draw.h:48 */
void	Draw_TileClear (cb_context_t *cbx, int x, int y, int w, int h); /* draw.h:51 */
extern qpic_t *draw_disc;										  /* draw.h:31 */
void M_Print (cb_context_t *cbx, int cx, int cy, const char *str); /* menu.h:78 */
void M_DrawPic (cb_context_t *cbx, int x, int y, qpic_t *pic);	   /* menu.h:82 */
extern cvar_t scr_style; /* gl_screen.c:94 */