Quake/wad.h

typedef struct
{
	int	 width, height;
	byte data[4]; // variably sized
} qpic_t;
typedef struct
{
	int	 filepos;
	int	 disksize;
	int	 size; // uncompressed
	char type;
	char compression;
	char pad1, pad2;
	char name[16]; // must be null terminated
} lumpinfo_t;